--- a/my-react-app/src/components/auth/Login.css
+++ b/my-react-app/src/components/auth/Login.css
@@ -11,13 +11,13 @@
   
   .login-title {
     font-size: 1.5em;
-    color: #781f1c;
+    color: #364953;
     text-align: center;
     margin-bottom: 20px;
   }
   
   .login-error {
-    color: #781f1c;
+    color: #364953;
     font-size: 0.9em;
     text-align: center;
     margin-bottom: 10px;
@@ -47,7 +47,7 @@
     width: 100%;
     padding: 10px;
     font-size: 1em;
-    background-color: #781f1c;
+    background-color: #364953;
     color: white;
     border: none;
     border-radius: 4px;
@@ -56,7 +56,7 @@
   }
   
   .login-button:hover {
-    background-color: #5e1a18;
+    background-color: #151c20;
   }
   
   .login-button:active {
