--- a/my-react-app/src/components/updateStaff/UpdateStaff.css
+++ b/my-react-app/src/components/updateStaff/UpdateStaff.css
@@ -84,27 +84,27 @@ h2 {
 }
 
 .add-slot-button {
-  background-color: #006218;
-  color: white;
   padding: 4px 8px;
-  font-size: 0.8em;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
+  margin-top: 15px;
   margin-bottom: 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .add-slot-button:hover {
-  background-color: #004212;
+  background-color: #45a049;
 }
 
 .add-slot-button:active {
-  background-color: #00300e;
+  background-color: #3e8e41;
   transform: translateY(2px);
 }
 
-.remove-slot-button {
+.remove-slot-button{
   background-color: #364953;
   color: white;
   padding: 4px 8px;
