--- a/my-react-app/src/components/updatePatient/UpdatePatient.css
+++ b/my-react-app/src/components/updatePatient/UpdatePatient.css
@@ -91,4 +91,11 @@
   .modal-content button:hover {
     background-color: #0056b3;
   }
+  .success-message {
+    color: green;
+    font-weight: bold;
+    margin-top: 20px;
+    text-align: center;
+  } 
+  
   
