--- a/my-react-app/src/components/OperationRequest/listOperationRequest/OperationRequestList.css
+++ b/my-react-app/src/components/OperationRequest/listOperationRequest/OperationRequestList.css
@@ -165,9 +165,17 @@ h2 {
   margin: 20px 0;
 }
 
+
 @media (max-width: 768px) {
   .modal-content {
     width: 95%;
     padding: 20px;
   }
+}
+
+.modal-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 20px;
 }
