--- a/my-react-app/src/components/Patient/patientList/PatientList.css
+++ b/my-react-app/src/components/Patient/patientList/PatientList.css
@@ -262,4 +262,11 @@
     transform: scale(0.95); 
   }
 
+  .no-results {
+    text-align: center;
+    grid-column: 1 / -1;
+    color: #666;
+    padding: 20px;
+  }
+
   
