--- a/my-react-app/src/components/Patient/patientListDoctor/PatientListDoctor.css
+++ b/my-react-app/src/components/Patient/patientListDoctor/PatientListDoctor.css
@@ -120,3 +120,10 @@
         grid-template-columns: 1fr;
     }
 }
+
+.no-results {
+    text-align: center;
+    grid-column: 1 / -1;
+    color: #666;
+    padding: 20px;
+  }
